fixed horizontal scrolling behaviour on all viewports

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ header {
 /* The Customer Feedback Section */
 
 #customer-feedback {
-
+    border: 2px solid rebeccapurple;
     background-color: var(--dark-blue);
     border-radius: 15px;
     color: var(--cream);
@@ -276,9 +276,6 @@ header {
 /* Media Queries */
 
 @media (min-width: 768px) {
-    body {
-        /* background-color: #0aad30; */
-    }
 
     #a-super-solution {
         font-weight: 400;
@@ -380,30 +377,30 @@ header {
     }
 
     #solution-arc {
-        width: 16rem;
-        top: 1.5em;
-        left: 8em;
+        width: calc(1/3*100vw);
+        top: 3rem;
+        left: calc(1/3.5*100vw);
         z-index: 10;
     }
 
     #main-section {
         display: grid;
-        grid-template-columns: 2fr 1fr 1fr;
+        grid-template-columns: 5fr 4fr 1fr;
         justify-content: center;
         align-items: center;
         flex-wrap: nowrap;
     }
 
     #hero-image-div {
-        margin-top: 2em;
+        margin-top: 1rem;
         height: 38rem;
-        width: 22rem;
+        width: 20rem;
         position: relative;
-        left: 2.7rem;
-        top: 0.2rem;
+        left: calc(1/13*100vw);
+        top: 1rem;
         background-image: url('./assets/image-hero-portrait@2x.png');
         background-size: cover;
-        background-position: center center;
+        background-position: left center;
         background-repeat: no-repeat;
         z-index: 0;
         grid-column: 2/2;
@@ -541,5 +538,37 @@ header {
 
     #social-links a:hover {
         opacity: 0.5;
+    }
+}
+
+@media (min-width: 1440px) {
+    #solution-arc {
+        width: 22rem;
+        top: 3rem;
+        left: 18rem;
+        z-index: 10;
+    }
+
+    #main-section {
+        display: grid;
+        grid-template-columns: 5fr 4fr 1fr;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+
+    #hero-image-div {
+        margin-top: 5rem;
+        height: 38rem;
+        width: 22rem;
+        position: relative;
+        left: -9rem;
+        top: 1rem;
+        background-image: url('./assets/image-hero-portrait@2x.png');
+        background-size: cover;
+        background-position: left center;
+        background-repeat: no-repeat;
+        z-index: 0;
+        grid-column: 2/2;
     }
 }
